<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.activity.auth.RegistrationActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieAnimation"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_150sdp"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/register" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/create_new_account"
        android:textColor="@color/royal_blue"
        android:textSize="@dimen/_18ssp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:text="@string/register_description" />

    <LinearLayout
        android:id="@+id/name_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:gravity="center"
        android:orientation="horizontal"
        android:transitionName="name_trans">


        <EditText
            android:id="@+id/first_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="@dimen/_3sdp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/input_box_bg"
            android:hint="@string/enter_first_name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_11sdp"
            android:textColor="@color/black"
            android:textColorHint="#AAAAAB" />

        <EditText
            android:id="@+id/last_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/_3sdp"
            android:layout_weight="1"
            android:autofillHints="name"
            android:background="@drawable/input_box_bg"
            android:hint="@string/enter_last_name"
            android:inputType="textPersonName"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_11sdp"
            android:textColor="@color/black"
            android:textColorHint="#AAAAAB" />


    </LinearLayout>

    <LinearLayout
        android:id="@+id/number_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/input_box_bg"
        android:gravity="center"
        android:orientation="horizontal"
        android:transitionName="number_trans">

        <EditText
            android:id="@+id/number"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:autofillHints="phone"
            android:background="@null"
            android:hint="@string/enter_number"
            android:inputType="number"
            android:paddingStart="@dimen/_15sdp"
            android:paddingEnd="@dimen/_11sdp"
            android:textColor="@color/black"
            android:textColorHint="#AAAAAB" />
    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/register"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45sdp"
        android:layout_marginStart="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginEnd="@dimen/_15sdp"
        android:background="@drawable/sign_disabled"
        android:text="@string/register"
        android:textColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="@dimen/_12ssp" />

        <TextView
            android:id="@+id/openLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_2sdp"
            android:text="@string/login"
            android:textColor="@color/light_blue"
            android:textSize="@dimen/_12ssp"
            android:textStyle="bold" />

    </LinearLayout>
</LinearLayout>


