<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.actions.OtpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/successContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/successAnimation"
                android:layout_width="@dimen/_65sdp"
                android:layout_height="@dimen/_65sdp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_120sdp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:lottie_autoPlay="false"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/success" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/successAnimation"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/registration_completed_successfully"
                android:textColor="@color/charcoal"
                android:textSize="@dimen/_12ssp"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/continue_btn"
                android:layout_width="@dimen/_130sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="@dimen/_30sdp"
                android:background="@drawable/sign_enabled"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/continue_go"
                    android:textColor="@color/white"
                    android:textSize="@dimen/_12ssp" />

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:contentDescription="@string/arrow_icon"
                    android:src="@drawable/right_arrow"
                    app:tint="@color/white" />
            </LinearLayout>

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/lottie_animation"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_100sdp"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:lottie_autoPlay="true"
                app:lottie_loop="false"
                app:lottie_rawRes="@raw/otp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                android:text="@string/enter_code"
                android:textColor="@color/charcoal"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_11sdp"
                android:autoSizeTextType="uniform"
                android:maxLines="1"
                android:text="@string/activation_description"
                android:textSize="@dimen/_11ssp"
                tools:targetApi="o" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="center">

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autoSizeTextType="uniform"
                    android:maxLines="1"
                    android:text="@string/share_icon"
                    android:textStyle="bold"
                    tools:targetApi="o" />

                <ImageView
                    android:id="@+id/changeEmail"
                    android:layout_width="@dimen/_15sdp"
                    android:layout_height="@dimen/_15sdp"
                    android:layout_marginStart="@dimen/_7sdp"
                    android:src="@drawable/editing"
                    app:tint="@color/dim" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/otp_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_45sdp"
                android:layout_marginTop="@dimen/_11sdp"
                android:gravity="center"
                android:orientation="horizontal" />

            <LinearLayout
                android:id="@+id/keyBoardContainer"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|center_horizontal"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/resendOTP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/_20sdp"
                    android:text="@string/default_timer"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>
        </LinearLayout>


    </RelativeLayout>


</ScrollView>